--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 /*Обнуление*/
 * {
   padding: 0;
@@ -74,6 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 body{
   padding: 30px;
   font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
 }
 header{
   display: flex;
@@ -114,4 +116,15 @@ header{
 }
 .otv a{
   color: #000;
+}
+.info a{
+  display: inline-block;
+  color: #443a52;
+  font-size: 25px;
+  margin: 40px;
+  padding: 10px;
+}
+.info a:hover{
+  border-bottom: 2px solid ;
+  border-top: 2px solid;
 }
